fix footer icon on small devices

--- a/resources/screen-common.less
+++ b/resources/screen-common.less
@@ -172,6 +172,7 @@ body {
 		display: -ms-flexbox;
 		display: flex;
 		flex-direction: row;
+		flex-wrap: wrap;
 	}
 
 	.footer-icons {
